syntax = "proto3";

package main;
option go_package = "../proto";
message TestValue {
  int64 a = 1;
  int64 b = 2;
  int64 c = 3;
  string d = 4;
}

message SetRequest {
  string key = 1;
  TestValue value = 2;
}

message SetResponse {
  string message = 1;
  string elapsed_time = 2;
}

message SearchRequest {
  string key = 1;
}

message SearchResponse {
  string key = 1;
  TestValue value = 2;
  string elapsed_time = 3;
}

service KeyValueService {
  rpc Set(SetRequest) returns (SetResponse);
  rpc Search(SearchRequest) returns (SearchResponse);
}